Fix include paths for some files to also work when installed

Part of https://bugzilla.gnome.org/show_bug.cgi?id=608175