calendar/gui/calendar-view.h
@@ -26,7 +26,7 @@
 #ifndef CALENDAR_VIEW_H
 #define CALENDAR_VIEW_H
 
-#include <widgets/menus/gal-view.h>
+#include <menus/gal-view.h>
 #include "gnome-cal.h"
 
 G_BEGIN_DECLS
