widgets/menus/gal-view-factory-etable.h
@@ -25,7 +25,7 @@
 #define _GAL_VIEW_FACTORY_ETABLE_H_
 
 #include <gtk/gtk.h>
-#include <widgets/menus/gal-view-factory.h>
+#include <menus/gal-view-factory.h>
 #include <table/e-table-specification.h>
 
 G_BEGIN_DECLS
